rough draft of landing page

--- a/views/landing-page.html
+++ b/views/landing-page.html
@@ -1,10 +1,32 @@
-<html>
+<html style="background-color:#36393f;">
+
 <head>
-    <link rel="stylesheet" href="views/app.css">
+    <style>
+        .body {
+            text-align: center;
+            color: #ffffff;
+        }
+
+        .description {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+        }
+    </style>
 </head>
+
 <body>
-    <form action="/">
-        <h2>Welcome</h2>
-    </form>
+    <div class="body">
+        <h2>D2 Vendor Alert</h2>
+        <div class="description">
+            <div>You have successfully authorized D2 Vendor Alert.</div>
+            <div>You can safely close this webpage and expect a message after the next reset.</div>
+            <div>Stay alert Guardian and good luck!</div>
+        </div>
+    </div>
 </body>
+
 </html>
