--- a/src/views/landing-page.html
+++ b/src/views/landing-page.html
@@ -4,15 +4,15 @@
     <style>
         .header {
             background: #16191e;
-            font-size: 40px;
         }
 
-        .body {
+        .header,
+        .descriptionBox {
             text-align: center;
             color: #ffffff;
         }
 
-        .box {
+        .descriptionBox {
             display: flex;
             justify-content: center;
         }
@@ -28,18 +28,17 @@
 </head>
 
 <body>
-    <div class="body">
-        <div class="header">
-            <h2>D2 Vendor Alert</h2>
-        </div>
-        <div class="box">
-        <div class="description">
+    <h1 class="header">
+        D2 Vendor Alert
+    </h1>
+
+    <section class="descriptionBox">
+        <main class="description">
             <div>You have successfully authorized D2 Vendor Alert.</div>
             <div>You can safely close this webpage and expect a message in Discord after the next reset.</div>
             <div>Stay alert Guardian and good luck!</div>
-        </div>
-    </div>
-    </div>
+        </main>
+    </section>
 </body>
 
 </html>
