--- a/src/views/landing-page.html
+++ b/src/views/landing-page.html
@@ -34,8 +34,9 @@
 
     <section class="descriptionBox">
         <main class="description">
+            <div>Welcome {{ guardian }}</div>
             <div>You have successfully authorized D2 Vendor Alert.</div>
-            <div>You can safely close this webpage and expect a message in Discord after the next reset.</div>
+            <div>Feel free to close this webpage and expect a message in Discord after the next daily reset.</div>
             <div>Stay alert Guardian and good luck!</div>
         </main>
     </section>
