finishing touches on landing page

--- a/src/views/landing-page.mustache
+++ b/src/views/landing-page.mustache
@@ -35,9 +35,9 @@
 
     <section class="descriptionBox">
         <main class="description">
-            <div>Welcome {{ guardian }}</div>
-            <div>You have successfully authorized D2 Vendor Alert.</div>
-            <div>Feel free to close this webpage and expect a message in Discord after the next daily reset.</div>
+            <div>Welcome {{ guardian }}!</div>
+            <div>You have successfully authorized D2 Vendor Alert</div>
+            <div>Feel free to close this webpage and expect a message in Discord after the next daily reset</div>
             <div>Stay alert Guardian and good luck!</div>
         </main>
     </section>
